change worker, position

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,17 @@
 # Project exclude paths
 /venv/
 .idea
+.vscode
+
+### Django ###
+*.log
+*.pot
+*.pyc
+__pycache__/
+local_settings.py
+
+# Database stuff
+*.sqlite3
+migrations/
+db.sqlite3
+ 
